--- a/providers/aws/v1/mgmt/namespaced/flux-system/gitrepository-release.yaml
+++ b/providers/aws/v1/mgmt/namespaced/flux-system/gitrepository-release.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 5m0s
   ref:
-    branch: main
+    tag: v0.0.1
   secretRef:
     name: github-sshkey
   url: ssh://git@github.com/berndonline/k8s-gitops-at-scale
